# good_looking_cubes

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
assets/models/: .DSStore  block.vox  castle.vox  chr_knight.vox  chr_sword.vox  monu10.pec  monu10.vox  monu16.pec  monu16.vox  pinball.pec  pinball.vox
src/: main.rs
src/debug/: load_vox.rs  log_framerate.rs  mod.rs
src/debug/world_edit/: mod.rs
src/input/: mod.rs
src/rendering/: bevy_to_winit.rs  camera_data_buffer.rs  create_window.rs  data_buffer.rs  gpu_data.rs  mod.rs  picture_info.rs  render.rs  render_system.rs  resources.rs
src/rendering/constructs/: color_format.rs  create_buffer_bindings.rs  create_image_bindings.rs  image_from_file.rs  image_view.rs  memory.rs  mod.rs  pipeline.rs  render_pass.rs  screen.rs
src/rendering/shaders/: canvas.vert  extract_color.glsl  hit_in_direction.glsl  index_world.glsl  index_world.wgsl  mod.rs  pc_buffer.glsl  plane_intersection.glsl  plane_intersection.wgsl  post_processing.glsl  random.glsl  random.wgsl  vector_utils.glsl  vector_utils.wgsl  version_header.glsl  vertex_canvas.wgsl  vertex_struct.wgsl  voxel_render.frag  voxel_render.wgsl  voxel_render_layout.glsl  world_buffer.glsl  world_draw.glsl
src/world/: change_world.rs  draw.rs  draw_type.rs  load_elements.rs  mod.rs  model_holder.rs  model_loader.rs  model_type.rs  parse_pec.rs  tform.rs  world_data.rs
src/world/draw/: draw_background.rs  draw_model.rs  mod.rs
