[package]
name = "wgpu_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26.0"
wgpu = "0.12.0"
pollster = "0.2.4"
env_logger = "0.9.0"
bytemuck = { version = "1.4", features = [ "derive" ] }

[dependencies.bevy]
path = "bevy"

syn="1.0.89"