[package]
name = "wgpu_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26.0"
wgpu = "0.12.0"
pollster = "0.2.4"
env_logger = "0.9.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
rand = "0.8.0"

[dependencies.bevy]
path = "bevy"
default-features = false
features = [
    "bevy_dynamic_plugin",
    "bevy_audio",
    "png",
    "hdr",
    "mp3",
    "x11",
]

[patch.crates-io]
glam = { path = 'glam' }