[package]
name = "wgpu_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26.0"
gfx-hal = "=0.6.0"
shaderc = "0.7.3"
pollster = "0.2.4"
env_logger = "0.9.0"
rand = "0.8.0"
futures = "0.3.19"
time = "0.3.5"
vox-format = "0.1.0"
png = "0.17.2"
unwrap = "1.2.1"
lazy_static = "1.4.0"
anyhow = "1.0.52"

[dependencies.bevy]
default-features = false
version = "0.6.0"
features = [
    "bevy_dynamic_plugin",
    "bevy_audio",
    "png",
    "hdr",
    "mp3",
    "x11",
]

[dependencies.bytemuck]
version = "1.4"
features = [
    "min_const_generics",
    "derive"
]

[patch.crates-io]
glam = { path = 'glam' }

[target.'cfg(target_os = "macos")'.dependencies.backend]
package = "gfx-backend-metal"
version = "=0.6.2"

[target.'cfg(windows)'.dependencies.backend]
package = "gfx-backend-dx12"
version = "=0.6.3"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies.backend]
package = "gfx-backend-vulkan"
version = "=0.6.1"

[profile.release]
debug = true
